<resources>
    <!-- Title and Menu Strings -->
    <string name="app_name">Masjid Umar</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_today">Today</string>
    <string name="title_activity_settings">Settings</string>
    <string name="news_title_empty">News Unavailable</string>

    <!-- Placeholder Strings -->
    <string name="masjid_link"><a href="http://www.masjidumar.us">Masjid Umar Website</a></string>
    <string name="timings_URL">http://www.masjidumar.us/files/timings/</string>
    <string name="iqamah_file">iqamah_timings.xml</string>
    <string name="prayer_file">prayer_timings.xml</string>
    <string name="news_URL">http://www.masjidumar.us/files/latest.htm</string>

    <!-- UI Strings -->
    <string name="pick_date">Pick Date</string>
    <string name="today_date">Today</string>
    <string name="iqaamah_time">Iqamah Time</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="next_alarm">Next alarm:</string>
    <string name="_for_">for</string>
    <string name="downloading_masjid">Downloading...</string>

    <!-- Notification Strings -->
    <string name="notification_title">Iqamah time</string>
    <string name="notification_start_text">Your device is set to</string>
    <string name="notification_end_text">Your device audio state has been reset</string>

    <!-- Prayer Name Strings -->
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>

    <!-- Error Message Strings -->
    <string name="no_alarm">No reminders set</string>
    <string name="timings_unavailable">Some timings are unavailable for this date</string>
    <string name="masjid_unavailable">Unable to load timings</string>
    <string name="download_failed">Download failed</string>
    <string name="empty_time">--:-- --</string>

    <!-- Preferences Strings -->
        <!-- State Enable -->
    <string name="state_enable_title">Masjid audio state</string>
    <string name="state_enable_summary">Enable masjid audio state</string>

        <!-- Audio State Strings -->
    <string name="audio_state">Device audio state in the masjid:</string>
    <string name="audio_state_title">Choose an audio state:</string>
    <string-array name="audio_state_entries">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Normal</item>
    </string-array>
    <string name="audio_state_default">Normal</string>

        <!-- Time Before Strings -->
    <string name="time_before">Start masjid audio state</string>
    <string name="time_before_title">Time before iqamah to start masjid audio state</string>
    <string-array name="time_before_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="time_before_entries_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string name="time_before_default">10</string>

        <!-- Time Duration Strings -->
    <string name="time_duration">End masjid audio state</string>
    <string name="time_duration_title">Time after iqamah to end masjid audio state</string>
    <string-array name="time_duration_entries">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="time_duration_entries_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string name="time_duration_default">15</string>

        <!-- Weekday Selection Strings -->
    <string name="weekday_title">Days to enable masjid audio state:</string>
    <string-array name="weekday_entries">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="weekday_default">1111111</string>

        <!-- Prayer Selection Strings -->
    <string name="prayer_sel_title">Prayers to enable masjid audio state:</string>
    <string-array name="prayer_sel_entries">
        <item>F</item>
        <item>S</item>
        <item>D</item>
        <item>A</item>
        <item>M</item>
        <item>I</item>
    </string-array>
    <string name="prayer_sel_default">111111</string>

    <!-- Days of the Week -->
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>


    <!-- Advanced Settings -->
    <string name="advanced_settings">Advanced Settings</string>

        <!-- Geolocation -->
    <string name="geolocation_title">Geolocation</string>
    <string name="geolocation_summary">Enable location based state changes</string>

    <!-- Version String -->
    <string name="version">Version: 2.0.0</string>

</resources>
