<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="state_enable"
        android:title="@string/state_enable_title"
        android:summary="@string/state_enable_summary"
        android:defaultValue="true" />

    <ListPreference
        android:dependency="state_enable"
        android:key="audio_state"
        android:title="@string/audio_state"
        android:dialogTitle="@string/audio_state_title"
        android:entries="@array/audio_state_entries"
        android:entryValues="@array/audio_state_entries"
        android:defaultValue="@string/audio_state_default" />

    <ListPreference
        android:dependency="state_enable"
        android:key="time_before"
        android:title="@string/time_before"
        android:dialogTitle="@string/time_before_title"
        android:entries="@array/time_before_entries"
        android:entryValues="@array/time_before_entries_values"
        android:defaultValue="@string/time_before_default" />

    <ListPreference
        android:dependency="state_enable"
        android:key="time_duration"
        android:title="@string/time_duration"
        android:dialogTitle="@string/time_duration_title"
        android:entries="@array/time_duration_entries"
        android:entryValues="@array/time_duration_entries_values"
        android:defaultValue="@string/time_duration_default" />

    <com.masjidumar.masjid.ToggleBarPreference
        android:dependency="state_enable"
        android:key="weekday_selection"
        android:title="@string/weekday_title"
        android:defaultValue="@string/weekday_default"
        app:entries="@array/weekday_entries"/>

    <com.masjidumar.masjid.ToggleBarPreference
        android:dependency="state_enable"
        android:key="prayer_selection"
        android:title="@string/prayer_sel_title"
        android:defaultValue="@string/prayer_sel_default"
        app:entries="@array/prayer_sel_entries"/>

<!--   <PreferenceScreen
        android:key="advanced_settings"
        android:title="@string/advanced_settings"
        android:persistent="false">
        <CheckBoxPreference
            android:key="geolocation"
            android:title="@string/geolocation_title"
            android:summary="@string/geolocation_summary"
            android:defaultValue="true" />
    </PreferenceScreen> -->

</PreferenceScreen>