<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="5dp">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/fajr"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/fajrDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Day buttons are put here -->
            <ToggleButton android:id="@+id/fajr_sun" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton android:id="@+id/fajr_mon" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton android:id="@+id/fajr_tue" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton android:id="@+id/fajr_wed" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton android:id="@+id/fajr_thu" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton android:id="@+id/fajr_fri" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton android:id="@+id/fajr_sat" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/sunrise"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/sunriseDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Day buttons are put here -->
            <ToggleButton android:id="@+id/sunrise_sun" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton android:id="@+id/sunrise_mon" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton android:id="@+id/sunrise_tue" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton android:id="@+id/sunrise_wed" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton android:id="@+id/sunrise_thu" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton android:id="@+id/sunrise_fri" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton android:id="@+id/sunrise_sat" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/dhuhr"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/dhuhrDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Day buttons are put here -->
            <ToggleButton android:id="@+id/dhuhr_sun" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton android:id="@+id/dhuhr_mon" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton android:id="@+id/dhuhr_tue" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton android:id="@+id/dhuhr_wed" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton android:id="@+id/dhuhr_thu" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton android:id="@+id/dhuhr_fri" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton android:id="@+id/dhuhr_sat" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/asr"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/asrDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Day buttons are put here -->
            <ToggleButton android:id="@+id/asr_sun" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton android:id="@+id/asr_mon" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton android:id="@+id/asr_tue" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton android:id="@+id/asr_wed" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton android:id="@+id/asr_thu" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton android:id="@+id/asr_fri" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton android:id="@+id/asr_sat" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/maghrib"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/maghribDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Day buttons are put here -->
            <ToggleButton android:id="@+id/maghrib_sun" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton android:id="@+id/maghrib_mon" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton android:id="@+id/maghrib_tue" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton android:id="@+id/maghrib_wed" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton android:id="@+id/maghrib_thu" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton android:id="@+id/maghrib_fri" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton android:id="@+id/maghrib_sat" android:layout_height="wrap_content" android:layout_width="45dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/isha"
            android:layout_gravity="center" />
        <LinearLayout android:id="@+id/ishaDays"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">
            <!-- Day buttons are put here -->
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_sun" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/sun" android:textOff="@string/sun"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_mon" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/mon" android:textOff="@string/mon"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_tue" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/tue" android:textOff="@string/tue"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_wed" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/wed" android:textOff="@string/wed"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_thu" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/thu" android:textOff="@string/thu"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_fri" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/fri" android:textOff="@string/fri"/>
            <ToggleButton style="?android:attr/buttonBarButtonStyle" android:id="@+id/isha_sat" android:layout_height="wrap_content" android:layout_width="40dp" android:textOn="@string/sat" android:textOff="@string/sat"/>
        </LinearLayout>
    </TableRow>
</TableLayout>