<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_new"
        android:id="@+id/mainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/prayer_row"
            android:padding="5dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp">

            <!-- News Title Row -->
            <TextView android:id="@+id/newsTitle"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <!-- News Date Row -->
            <TextView android:id="@+id/newsDate"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
            <!-- News Text Row -->
            <TextView android:id="@+id/newsText"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="vertical" />
        </LinearLayout>


        <!--- Alarm Row -->
        <TextView android:id="@+id/nextAlarm"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:id="@+id/pickDateButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:onClick="pickDate"
                android:background="@drawable/row_border"
                android:clickable="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />


            <TextView  android:id="@+id/iqamahText"
                android:text="@string/iqaamah_time"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:background="@drawable/row_border"
                android:clickable="true"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:onClick="toggleTimings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:padding="10dp">
            <!--- Fajr Row -->
            <LinearLayout
                android:id="@+id/fajrRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/fajrCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/fajr"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fajrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--- Sunrise Row -->
            <LinearLayout
                android:id="@+id/sunriseRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/sunriseCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/sunrise"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sunriseTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--- Dhuhr Row -->
            <LinearLayout
                android:id="@+id/dhuhrRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/dhuhrCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dhuhr"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dhuhrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--- Asr Row -->
            <LinearLayout
                android:id="@+id/asrRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/asrCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/asr"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/asrTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--- Maghrib Row -->
            <LinearLayout
                android:id="@+id/maghribRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/maghribCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/maghrib"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/maghribTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--- Isha Row -->
            <LinearLayout
                android:id="@+id/ishaRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/prayer_row"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/ishaCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/isha"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ishaTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/website_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:linksClickable="true"
                android:text="@string/masjid_link" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>